update shadow weaving

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a href="/digital-weaving.html">Digital weaving</a>
             </li>
             <li>
-                test
+                <a href="/shadow-weaving.html">Shadow weaving</a>
             </li>
             <li>
                 <a href="/three-bit-adder.html">3-bit adder</a>
