--- a/three-bit-adder.html
+++ b/three-bit-adder.html
@@ -187,7 +187,7 @@
                 </tbody>
             </table>
             <p>
-                In the example above all 4 loops are closed, representing <span style="text-wrap: nowrap;"><span class="mono">3 + 3</span></span> or <span class="mono">11<sub>2</sub></span> +  <span class="mono">11<sub>2</sub></span>
+                In the example above all 4 loops are closed, representing <span style="text-wrap: nowrap;"><span class="mono">3</span> + <span class="mono">3</span></span> or <span class="mono">11<sub>2</sub></span> + <span class="mono">11<sub>2</sub></span>
                 (binary). This results in the maximum sum of this adder: <span class="mono">6</span> or <span class="mono">110<sub>2</sub></span> (binary).
             </p>
         </div>
