--- a/beaded-textiles.html
+++ b/beaded-textiles.html
@@ -24,25 +24,52 @@
 
 <body>
     <main>
-        <a href="/"><h1>ETC</h1></a>
+        <a href="/">
+            <h1>ETC</h1>
+        </a>
         <h2>Beaded Textiles</h2>
         <img src="sun-bag/IMG_3642.jpg" alt="small beaded purse with an image of a sun" />
         <div class="description">
             <p>
-                I've recently returned to a bead loom.
+                One of my first introductions to weaving was a small bead loom.
             </p>
             <p>
-                I made this small beaded purse when I was 10 or 11 years old. I had a notebook of graph paper and would draw o
+                I made this small beaded purse in 2002, when I was 10 or 11 years old. I would
+                draw patterns in my graph paper notebook that I could translate 1 to 1 into a beaded array.
             </p>
         </div>
-        <img src="sun-bag/IMG_3643.jpg" alt="small beaded purse with an image of a sun" />
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSy9qzL2S0KwlPPyqxrYQPv716hw-PGQy7jXb_ixqByWrwSuyKZan9lgUF3OPajVL-HCfiD5FgeH5Cn/pubhtml?widget=true&amp;headers=false"></iframe>
+        <iframe
+            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSy9qzL2S0KwlPPyqxrYQPv716hw-PGQy7jXb_ixqByWrwSuyKZan9lgUF3OPajVL-HCfiD5FgeH5Cn/pubhtml?widget=true&amp;headers=false"></iframe>
         <div class="description">
             <p>
-                Recreation of graph paper using <a href="https://docs.google.com/spreadsheets/d/1d3AV0ZiK4f6-4aRk4lnaMRhpOeFY6wewyfUk6q8IXfQ/edit#gid=0" target="_blank">google sheets</a>, 2024
+                Recreation of graph paper using <a
+                    href="https://docs.google.com/spreadsheets/d/1d3AV0ZiK4f6-4aRk4lnaMRhpOeFY6wewyfUk6q8IXfQ/edit#gid=0"
+                    target="_blank">google sheets</a>, 2024
             </p>
         </div>
+            <!-- <img src="sun-bag/IMG_3643.jpg" alt="small beaded purse with an image of a sun" /> -->
         <img src="sun-bag/IMG_3644.jpg" alt="small beaded purse with an image of a sun" />
+        <div class="description">
+            <p>
+                The relationship between pixels and beads/fabric continues to fascinate me and I've recently started playing
+                with a bead loom again.
+            </p>
+        </div>
+        <div class="two-column" style="width: 50rem;">
+            <img src="tiles/IMG_5399.jpg" />
+            <img style="max-width: 16rem; margin-left: auto;" src="tiles/3.png" />
+        </div>
+
+        <div class="two-column" style="width: 50rem;">
+            <img src="tiles/IMG_1964.jpg" />
+            <img style="max-width: 16rem; margin-left: auto;" src="tiles/1.png" />
+        </div>
+
+        <div class="description">
+            <p>
+                I've also been cataloging decorative tile around my neighborhood in Seattle with plans to create beaded versions. These patterns change every block and half or so, and I haven't found an explanation as to why.
+            </p>
+        </div>
     </main>
 </body>
 
