--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>ETC</h1>
         <ul>
             <li>
-                <a href="/digital-weaving.html">Digital weaving</a>
+                <a href="/beaded-textiles.html">Beaded textiles</a>
             </li>
             <li>
                 <a href="/shadow-weaving.html">Shadow weaving</a>
@@ -62,10 +62,10 @@
                 <a href="/three-bit-adder.html">3-bit adder</a>
             </li>
             <li>
-                <a href="/beaded-textiles.html">Beaded textiles</a>
+                <a href="/three-bit-adder.html">Translation and encoding</a>
             </li>
             <li>
-                test
+                <a href="/digital-weaving.html">Digital weaving</a>
             </li>
         </ul>
     </main>
