--- a/shadow-weaving.html
+++ b/shadow-weaving.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Shadow weaving</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
@@ -15,41 +15,46 @@
 </head>
 
 <body>
-    <main>
+    <header>
         <a href="/">
             <h1>ETC</h1>
         </a>
+    </header>
+    <main>
         <h2>Shadow Weaving</h2>
         <img src="/shadow-weaving/2.png" alt="" />
         <div class="description">
             <p>
-                <a href="https://shelby.cool/shadow-weaving/">Shadow Weaving</a>
+                <a href="https://shelby.cool/shadow-weaving/">Shadow weaving</a> is a web tool made to experiment with
+                color and weave structure.
             </p>
         </div>
         <video src="/shadow-weaving/101.mp4" loop muted controls autoplay></video>
 
         <div class="description">
             <p>
-                This is a web tool made to experiment with color and weave structure. 
-            </p>
-            <p>
-                Each warp and weft thread can be toggled on or off, and each intersection of threads can be toggled to change which thread is on top. Certain intersections can be either color depending on this structure.
+                Each warp and weft thread can be toggled on or off to determine its color, and each intersection of
+                threads can be toggled to change which thread is on top. Certain intersections can be either color
+                depending on this structure.
             </p>
         </div>
         <video style="width: 10rem" src="/shadow-weaving/100.mp4" loop muted controls autoplay></video>
         <div class="description">
             <p>
-                I was interested in the way the structure of a weave can determine color, and how that can be manipulated into maze-like patterns.
+                I am interested in the way the structure of a weave can determine color, and how that can be manipulated
+                into maze-like patterns.
             </p>
         </div>
         <img src="/shadow-weaving/IMG_4426.jpg" alt="paper weaving" />
         <div class="description">
             <p>
-                I explored this technique using paper strips as well, deviating from a plain weave in order to change the direction of a stripe and changing the overall color pattern.
+                I am exploring this technique using paper strips as well, deviating from a plain weave in order to
+                change the direction of a stripe and changing the overall color pattern.
             </p>
             <p>
-                This project was inspired by <a href="https://taubaauerbach.com/" target="_blank">Tauba Auerbach</a>'s work
-                after I saw their <a href="https://www.sfmoma.org/exhibition/tauba-auerbach-s-v-z/"
+                This project was inspired by <a href="https://taubaauerbach.com/" target="_blank">Tauba Auerbach</a>'s
+                work
+                after seeing their <a href="https://www.sfmoma.org/exhibition/tauba-auerbach-s-v-z/"
                     target="_blank">show at the SFMoMA</a> in 2022, which featured <a
                     href="https://taubaauerbach.com/view.php?id=469" target="_blank">shadow weaving</a> as a technique.
             </p>
@@ -57,6 +62,11 @@
 
         <img src="/shadow-weaving/1.png" alt="" />
     </main>
+    <footer>
+        <p>
+            <a href="/three-bit-adder.html">3-bit adder &rarr;</a>
+        </p>
+    </footer>
 </body>
 
 </html>
