add navigation and favicon

--- a/album-of-weaving-patterns.html
+++ b/album-of-weaving-patterns.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Translation and encoding</title>
+    <link rel="favicon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
@@ -103,6 +104,7 @@
     </main>
     <footer>
         <p>
+            <a href="/three-bit-adder.html">&larr; 3-bit adder</a>
             <a href="/misc.html">Miscellaneous &rarr;</a>
         </p>
     </footer>
