--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>etc</title>
+    <title>ETC – Shelby Wilson</title>
+    <link rel="favicon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
@@ -113,7 +114,7 @@
             Shelby Wilson is an artist and computer programmer. She learned how to sew, knit, crochet, and weave along
             with a deep appreciation of math, science, and art from her mom.
         </p>
-        <p style="display: flex; flex-direction: row; justify-content: space-between;">
+        <p>
             <a href="https://shelby.cool" target="_blank">website</a>
         
             <a href="https://github.com/shelbywilson" target="_blank">github</a>
