--- a/misc.html
+++ b/misc.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Miscellaneous</title>
+    <link rel="favicon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
@@ -71,6 +72,7 @@
     </main>
     <footer>
         <p>
+            <a href="/album-of-weaving-patterns.html">&larr; Translation and encoding</a>
             <a href="/beaded-textiles.html">Beaded textiles &rarr;</a>
         </p>
     </footer>
