--- a/beaded-textiles.html
+++ b/beaded-textiles.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beaded textiles</title>
+    <link rel="favicon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
@@ -79,6 +80,7 @@
     </main>
     <footer>
         <p>
+            <a href="/misc.html">&larr; Miscellaneous</a>
             <a href="/shadow-weaving.html">Shadow weaving &rarr;</a>
         </p>
     </footer>
