--- a/shadow-weaving.html
+++ b/shadow-weaving.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shadow weaving</title>
+    <link rel="favicon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
@@ -64,6 +65,7 @@
     </main>
     <footer>
         <p>
+            <a href="/beaded-textiles.html">&larr; Beaded textiles</a>
             <a href="/three-bit-adder.html">3-bit adder &rarr;</a>
         </p>
     </footer>
