update nav, add image

--- a/beaded-textiles.html
+++ b/beaded-textiles.html
@@ -70,18 +70,19 @@
             <img src="tiles/IMG_1595.jpg" />
             <img src="tiles/IMG_5399.jpg" />
             <img style="max-width: 60%;" src="tiles/2.png" />
+            <img style="max-width: 60%;" src="tiles/3.png" />
             <img src="tiles/IMG_1591.jpg" />
-            <img src="tiles/IMG_1590.jpg" />
+            <img src="tiles/IMG_1589.jpg" />
+            <!-- <img src="tiles/IMG_1590.jpg" /> -->
             <img src="tiles/IMG_1593.jpg" />
             <img src="tiles/IMG_1594.jpg" />
             <img src="tiles/IMG_1587.jpg" />
-            <img src="tiles/IMG_1589.jpg" />
         </div>
     </main>
     <footer>
         <p>
-            <a href="/misc.html">&larr; Miscellaneous</a>
-            <a href="/shadow-weaving.html">Shadow weaving &rarr;</a>
+            <a href="/shadow-weaving.html">&larr; Shadow weaving</a>
+            <a href="/three-bit-adder.html">3-bit adder &rarr;</a>
         </p>
     </footer>
 </body>
