--- a/misc.html
+++ b/misc.html
@@ -73,7 +73,7 @@
     <footer>
         <p>
             <a href="/album-of-weaving-patterns.html">&larr; Translation and encoding</a>
-            <a href="/beaded-textiles.html">Beaded textiles &rarr;</a>
+            <a href="/shadow-weaving.html">Shadow weaving &rarr;</a>
         </p>
     </footer>
 </body>
