--- a/shadow-weaving.html
+++ b/shadow-weaving.html
@@ -65,8 +65,8 @@
     </main>
     <footer>
         <p>
-            <a href="/beaded-textiles.html">&larr; Beaded textiles</a>
-            <a href="/three-bit-adder.html">3-bit adder &rarr;</a>
+            <a href="/misc.html">&larr; Miscellaneous</a>
+            <a href="/beaded-textiles.html">Beaded textiles&rarr; </a>
         </p>
     </footer>
 </body>
