--- a/album-of-weaving-patterns.html
+++ b/album-of-weaving-patterns.html
@@ -12,32 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <style>
-        @keyframes page {
-            0% {
-                opacity: 1;
-            }
-
-            25% {
-                opacity: 1;
-            }
-
-            25.01% {
-                opacity: 0;
-            }
-
-            75% {
-                opacity: 0;
-            }
-
-            75.01% {
-                opacity: 1;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-
         .book-page {
             border: 1px solid gray;
             position: relative;
@@ -68,7 +42,7 @@
         <div class="description">
             <p>
                 <a href="https://shelby.cool/v1/patterns.html" target="_blank">Album of Weaving Patterns</a> is a
-                translation and encoding of a Russian weaving manual for multi-harness looms published in 1912. It is a practice in archiving, as well as reinterpretion.
+                web tool that is a translation and encoding of a <a href="https://shelby.cool/v1/dist/files/weaving_patterns.pdf" target="_blank">Russian weaving manual</a> for multi-shaft looms published in 1912. It is a practice in archiving, as well as reinterpretion.
             </p>
             <p>
                 This project begain in 2013 with an email from my mom, after a PDF copy of the manual was sent to her.
