--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <a href="/beaded-textiles.html">Beaded textiles</a>
             </li>
             <li>
-                <a href="/album-of-weaving-patterns.html">Translation and encoding</a>
+                <a href="/album-of-weaving-patterns.html">Translation <br class="mobile-only" /> and encoding</a>
             </li>
             <li>
                 <a href="/three-bit-adder.html">3-bit adder</a>
