--- a/shadow-weaving.html
+++ b/shadow-weaving.html
@@ -35,7 +35,7 @@
         <div class="description">
             <p>
                 Each warp and weft thread can be toggled on or off to determine its color, and each intersection of
-                threads can be toggled to change which thread is on top. Certain intersections can be either color
+                threads can be toggled to change which thread is on top. Intersections of threads of different colors can be either color
                 depending on this structure.
             </p>
         </div>
