--- a/three-bit-adder.html
+++ b/three-bit-adder.html
@@ -239,7 +239,7 @@
     <footer>
         <p>
             <a href="/beaded-textiles.html">&larr; Shadow weaving</a>
-            <a href="/album-of-weaving-patterns.html">Translation and encoding &rarr;</a>
+            <a href="/album-of-weaving-patterns.html">Translation <br class="mobile-only" /> and encoding &rarr;</a>
         </p>
     </footer>
 </body>
