--- a/album-of-weaving-patterns.html
+++ b/album-of-weaving-patterns.html
@@ -42,7 +42,7 @@
         <div class="description">
             <p>
                 <a href="https://shelby.cool/v1/patterns.html" target="_blank">Album of Weaving Patterns</a> is a
-                web tool that is a translation and encoding of a <a href="https://shelby.cool/v1/dist/files/weaving_patterns.pdf" target="_blank">Russian weaving manual</a> for multi-shaft looms published in 1912. It is a practice in archiving, as well as reinterpretion.
+                web tool that is a translation and encoding of a <a href="https://shelby.cool/v1/dist/files/weaving_patterns.pdf" target="_blank">Russian weaving manual</a> for multi-shaft looms that was published in 1912. It is a practice in archiving, as well as reinterpretion.
             </p>
             <p>
                 This project begain in 2013 with an email from my mom, after a PDF copy of the manual was sent to her.
