--- a/misc.html
+++ b/misc.html
@@ -103,7 +103,7 @@
             </p>
         </div>
         <img src="https://raw.githubusercontent.com/shelbywilson/sfpc-rtp/master/muriel/images/1.png" />
-        <img src="https://raw.githubusercontent.com/shelbywilson/sfpc-rtp/master/muriel/images/muriel.gif" />
+        <img style="margin-top: 3rem;" src="https://raw.githubusercontent.com/shelbywilson/sfpc-rtp/master/muriel/images/muriel.gif" />
         <div class="description">
             <p>
                 A kind of <a href="https://shelby.cool/#/muriel" target="_blank"> digital tapestry</a> using text as
@@ -111,7 +111,7 @@
             </p>
         </div>
         <video src="embroidery/timelapse-compressed.mp4" loop muted controls autoplay></video>
-        <img src="embroidery/IMG_6876.png" alt="" />
+        <img style="margin-top: 3rem;" src="embroidery/IMG_6876.png" alt="" />
         <div class="description">
             <p>
                 A gift for my partner, an embroidered version of <a href="https://spacefiller.space/livingwall/"
