--- a/three-bit-adder.html
+++ b/three-bit-adder.html
@@ -238,7 +238,7 @@
     </main>
     <footer>
         <p>
-            <a href="/beaded-textiles.html">&larr; Shadow weaving</a>
+            <a href="/beaded-textiles.html">&larr; Beaded textiles</a>
             <a href="/album-of-weaving-patterns.html">Translation <br class="mobile-only" /> and encoding &rarr;</a>
         </p>
     </footer>
