--- a/shadow-weaving.html
+++ b/shadow-weaving.html
@@ -26,7 +26,7 @@
         <img src="/shadow-weaving/2.png" alt="" />
         <div class="description">
             <p>
-                <a href="https://shelby.cool/shadow-weaving/">Shadow weaving</a> is a web tool made to experiment with
+                <a href="https://shelby.cool/shadow-weaving/" target="_blank">Shadow weaving</a> is a web tool made to experiment with
                 color and weave structure.
             </p>
         </div>
