--- a/three-bit-adder.html
+++ b/three-bit-adder.html
@@ -125,7 +125,7 @@
                 hanging.
             </p>
             <p>
-                Using binary logic, two values can be added together with a sum displayed as encoded LEDs.
+                Using binary logic and <a href="https://en.wikipedia.org/wiki/NAND_gate" target="_blank">NAND gates</a>, two values can be added together with a sum displayed as encoded LEDs.
             </p>
         </div>
         <div class="two-column">
