--- a/misc.html
+++ b/misc.html
@@ -95,8 +95,8 @@
                 Triaxial weaving
             </p>
         </div>
-        <img src="natural-dye/IMG_1283.jpg" alt="" />
-        <img src="natural-dye/IMG_1269.jpg" alt="" />
+        <img src="natural-dye/IMG_1283.jpg" alt="three fabric swatches dyed various shades of yellow" />
+        <img style="margin-top: 3rem;" src="natural-dye/IMG_1269.jpg" alt="pot for dyeing with fabric and liquid" />
         <div class="description">
             <p>
                 Natural dye using pomegranates and iron oxide
