update alt text and links

--- a/misc.html
+++ b/misc.html
@@ -64,15 +64,15 @@
     </header>
     <main>
         <h2>Miscellaneous</h2>
-        <img src="misc/IMG_1779.jpg" alt="" />
+        <img src="misc/IMG_1779.jpg" alt="view of loom with fabric on it" />
         <div class="description">
             <p>
                 Weaving sampler
             </p>
         </div>
         <div class="two-column">
-            <img src="misc/IMG_2795.jpg" alt="" />
-            <img src="misc/IMG_2816.jpg" alt="" />
+            <img src="misc/IMG_2795.jpg" alt="darning loom" />
+            <img src="misc/IMG_2816.jpg" alt="sock with mended patch" />
         </div>
         <div class="description">
             <p>
@@ -87,8 +87,8 @@
             </p>
         </div>
         <div class="two-column">
-            <img src="misc/IMG_3612.jpg" alt="" />
-            <img src="misc/IMG_3651.jpg" alt="" />
+            <img src="misc/IMG_3612.jpg" alt="strips of striped paper in triaxial weave" />
+            <img src="misc/IMG_3651.jpg" alt="strips of blue, green, and orange paper in triaxial weave" />
         </div>
         <div class="description">
             <p>
@@ -111,7 +111,7 @@
             </p>
         </div>
         <video src="embroidery/timelapse-compressed.mp4" loop muted controls autoplay></video>
-        <img style="margin-top: 3rem;" src="embroidery/IMG_6876.png" alt="" />
+        <img style="margin-top: 3rem;" src="embroidery/IMG_6876.png" alt="embroidered shirt pocket with plant design" />
         <div class="description">
             <p>
                 A gift for my partner, an embroidered version of <a href="https://spacefiller.space/livingwall/"
