--- a/shadow-weaving.html
+++ b/shadow-weaving.html
@@ -23,14 +23,14 @@
     </header>
     <main>
         <h2>Shadow Weaving</h2>
-        <img src="/shadow-weaving/2.png" alt="" />
+        <img src="shadow-weaving/2.png" alt="pixelated dark green and white pattern" />
         <div class="description">
             <p>
                 <a href="https://shelby.cool/shadow-weaving/" target="_blank">Shadow weaving</a> is a web tool made to experiment with
                 color and weave structure.
             </p>
         </div>
-        <video src="/shadow-weaving/101.mp4" loop muted controls autoplay></video>
+        <video src="shadow-weaving/101.mp4" loop muted controls autoplay></video>
 
         <div class="description">
             <p>
@@ -39,14 +39,14 @@
                 depending on this structure.
             </p>
         </div>
-        <video style="width: 10rem" src="/shadow-weaving/100.mp4" loop muted controls autoplay></video>
+        <video style="width: 10rem" src="shadow-weaving/100.mp4" loop muted controls autoplay></video>
         <div class="description">
             <p>
                 I am interested in the way the structure of a weave can determine color, and how that can be manipulated
                 into maze-like patterns.
             </p>
         </div>
-        <img src="/shadow-weaving/IMG_4426.jpg" alt="paper weaving" />
+        <img src="shadow-weaving/IMG_4426.jpg" alt="paper weaving" />
         <div class="description">
             <p>
                 I am exploring this technique using paper strips as well, deviating from a plain weave in order to
@@ -61,7 +61,7 @@
             </p>
         </div>
 
-        <img src="/shadow-weaving/1.png" alt="" />
+        <img src="shadow-weaving/1.png" alt="pixelated green and white pattern" />
     </main>
     <footer>
         <p>
