--- a/album-of-weaving-patterns.html
+++ b/album-of-weaving-patterns.html
@@ -37,7 +37,7 @@
     <main>
         <h2>Translation and Encoding</h2>
         <div style="overflow: hidden;">
-            <img style="margin-bottom: -0.25rem; " src="digital-weaving/animation.gif" alt="" />
+            <img style="margin-bottom: -0.25rem; " src="digital-weaving/animation.gif" alt="animation of how to read weaving draft" />
         </div>
         <div class="description">
             <p>
@@ -48,12 +48,12 @@
                 This project begain in 2013 with an email from my mom, after a PDF copy of the manual was sent to her.
             </p>
         </div>
-        <img src="digital-weaving/email.png" alt="" />
+        <img src="digital-weaving/email.png" alt="screenshot of email" />
         <div class="two-column" style="gap: 0">
-            <img src="digital-weaving/book-cover.png" alt="" />
+            <img src="digital-weaving/book-cover.png" alt="book cover in Russian" />
             <div class="book-page">
-                <img src="digital-weaving/book.png" alt="" />
-                <img src="digital-weaving/book-2.png" alt="" />
+                <img src="digital-weaving/book.png" alt="page of book in Russian about weaving" />
+                <img src="digital-weaving/book-2.png" alt="page of book in Russian about weaving" />
             </div>
         </div>
         <div class="description">
@@ -63,8 +63,8 @@
             </p>
         </div>
         <div class="two-column">
-            <img src="digital-weaving/encoding.png" alt="" />
-            <img src="digital-weaving/dictionary.png" alt="" />
+            <img src="digital-weaving/encoding.png" alt="JSON with array of binary" />
+            <img src="digital-weaving/dictionary.png" alt="Russian to English translations of weaving terms" />
         </div>
         <div class="description">
             <p>
@@ -73,7 +73,7 @@
             </p>
         </div>
         <div style="overflow: hidden;">
-            <img style="margin-top: -2rem;" src="digital-weaving/1.gif" alt="" />
+            <img style="margin-top: -2rem;" src="digital-weaving/1.gif" alt="demonstration of weaving web app" />
         </div>
     </main>
     <footer>
